Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95139

Using backticks for ListElement value results in "cannot use script for property value"

XMLWordPrintable

    • e8121d93003f621a6d91e32c1539945a0779745a (qt/qtdeclarative/dev) 1d0ef3135fdb1c0d0f6577afde3f31476ae0cb7f (qt/qtdeclarative/6.2)

      https://code.qt.io/cgit/qt/qtdeclarative.git/tree/examples/quick/views/listview/content/RecipesModel.qml?id=31032a26311fe1582af75357d7990601696eb122#n57 results in:

      15:18:35: Starting /home/mitch/dev/qt-dev-debug/qtdeclarative/tests/auto/quick/examples/tst_examples sgexamples:/home/mitch/dev/qt-dev/qtdeclarative/examples/quick/views/listview/expandingdelegates.qml...********* Start testing of tst_examples *********Config: Using QtTest library 6.2.0, Qt 6.2.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 9.3.0), ubuntu 20.04PASS   : tst_examples::initTestCase()QWARN  : tst_examples::sgexamples(/home/mitch/dev/qt-dev/qtdeclarative/examples/quick/views/listview/expandingdelegates.qml) QList(file:///home/mitch/dev/qt-dev/qtdeclarative/examples/quick/views/listview/expandingdelegates.qml:225:16: Type RecipesModel unavailable            model: RecipesModel {}                   ^, file:///home/mitch/dev/qt-dev/qtdeclarative/examples/quick/views/listview/content/RecipesModel.qml:65:9: ListElement: cannot use script for property value            method: `<html>            ^)FAIL!  : tst_examples::sgexamples(/home/mitch/dev/qt-dev/qtdeclarative/examples/quick/views/listview/expandingdelegates.qml) Compared values are not the same   Actual   (component.status())  : Error   Expected (QQmlComponent::Ready): Ready   Loc: [/home/mitch/dev/qt-dev/qtdeclarative/tests/auto/quick/examples/tst_examples.cpp(253)]PASS   : tst_examples::cleanupTestCase()Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 2255ms********* Finished testing of tst_examples *********15:18:37: /home/mitch/dev/qt-dev-debug/qtdeclarative/tests/auto/quick/examples/tst_examples exited with code 1
      

      Using double quotes instead of backticks works, but apparently backticks should work too.

        For Gerrit Dashboard: QTBUG-95139
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes