Treat substitution free template string literals as string bindings

Before this change, they were treated as script bindings, which are less
efficient, and could not be used in ListElement.

Fixes: QTBUG-95139
Change-Id: Ic66052c7f58b3ffdf1b7c0c169f42b4f99df62a1
Reviewed-by: Maximilian Goldstein <max.goldstein@qt.io>
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit e8121d93003f621a6d91e32c1539945a0779745a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>